tests/profile/error/module/wrongtype_notLoadedInstruction.profile
{
  "version": { "major": 12, "minor": 13 },
  "modules": [
    {
      "name": "jkl-module",
      "loadedInstruction": "instr",
      "notLoadedInstruction": 1.0
    }
  ]
}
